--- a/style.css
+++ b/style.css
@@ -13,7 +13,6 @@
     font-size: 60px;
 }
 .Shop{
-    margin: 32px;
     padding: 20px 43px;
     background-color: #E55473;
     padding: 5px 10px;
@@ -97,43 +96,60 @@ header{
 #offer{
     text-align: center;
     background-color: rgb(245, 241, 242);
-    padding: 100px 100px 100px 100px; 
-    margin-left: 100px;
     padding: 20px 20px;
     font-size: 18px;
     line-height: 30px;
     display: flex;
+    justify-content: center;
+    align-items: center;
 }
 #sign-in{
     background-color: #E55473;
 }
 .discount{
     text-align: center;
-    margin-left: 0px;
+
+    
 }
 #offer .flower-vase{
     align-items: center;
     margin: 30px 90px 30px 150px;
 }
 .insta{
-    text-align: center;
+    text-align: center
     
 }
 .third-paragraph{
     text-align: center;
 }
 .pink-rose{
-    display: flex;
-    margin: 25px 50px 25px 50px;
-    gap: 5px;
-    /* width: 250px; */
     height: 300px;
-    justify-content: space-between;
-    float: left;
-    width:15%;
+}
+.pink-roses{
+    display: flex;
+    gap: 15px;
+    justify-content: center;    
     padding: 5px;
+}
+.input-field{
+    background-image: url(Flower-Asset/Rectangle\ 9.png );
+  padding: 90px 0px;
+  text-align: center;
+
 }
 #deals-id{
     text-align: center;
 }
+.flower{
+    color: #E55473;
+}
+.container{
+    text-align: center;
+    color: white;
+    font-size: 7px;
+    background-color: black;
+    padding: 20px;
+    top: 50%;
+    left: 50%
+       
 }
