--- a/style.css
+++ b/style.css
@@ -86,8 +86,12 @@ header{
     display: flex;
     gap: 90px;
     justify-content: center;
-    padding: 40px;
+    padding: 50px;
     text-align: center;
+    background-color: rgba(39, 39, 39, 0.05);
+    border: 70px;
+    margin: 30px 200px;
+    
 }
 .three-images p{
  text-align: center;
@@ -113,7 +117,7 @@ header{
 }
 #offer .flower-vase{
     align-items: center;
-    margin: 30px 90px 30px 150px;
+    margin: 80px 90px 30px 150px;
 }
 .insta{
     text-align: center
@@ -133,8 +137,18 @@ header{
 }
 .input-field{
     background-image: url(Flower-Asset/Rectangle\ 9.png );
-  padding: 90px 0px;
-  text-align: center;
+    padding: 90px 200px;
+    text-align: center;
+    margin: 0px auto;
+    
+}
+.input-field .email{
+    width: 500px;
+    height: 50px;
+    border-radius: 8px;
+    padding-left: 20px;
+    border: none;
+    margin: auto;
 }
 button{
     background-color: #E55473;
@@ -160,10 +174,23 @@ button{
 .container{
     text-align: center;
     color: white;
-    font-size: 7px;
+    font-size: 10px;
     background-color: black;
     padding: 20px;
     top: 50%;
     left: 50%
-       
+}
+.title{
+    font-family: Lato;
+font-size: 48px;
+}
+.content{
+    font-size: 18px;
+}
+.web-address{
+    color: rgba(255, 255, 255, 0.40);
+    font-size: 16px;
+}
+.email{
+    
 }
