extra section creating

--- a/style.css
+++ b/style.css
@@ -65,9 +65,9 @@ header{
     margin: relative;
     border-radius: 50% 50% 0 0;
     padding: 30px 20px 0;}
-.three-images p{
+.three-images{
     text-align: center;
-    text-decoration: underline;}
+    text-decoration: underline;} 
 .three-images {
     display: flex;
     gap: 20px;
@@ -90,24 +90,47 @@ header{
  text-decoration: underline;}
 #offer{
     background-color: rgb(245, 241, 242);
-    padding: 30px 30px;
-    border: 30px 30px;
-    margin: 70px 30px 70px 80px;
+    padding: 30px 0px 30px 400px;
+    border: 20px 20px;
+    /* margin-left: 10px; */
     display: flex;
+    width: 1100px;
+    height: 500px;
+    align-items: center;
     font-size: 18px;}
+    
 #sign-in{
-    background-color: #E55473;
+    background-color: #E55473;  
+    margin-left: 150px; 
 } 
 #offer .flower-vase{
-    margin: 30px 90px 30px 100px;
-    display: flex;}
-#offer .discount{
-    
+    margin: 10px 10px 5px 10px;}
+#offer .discount .sale{
+    color: #272727;
+    font-size: 30px;
 }
+#offer .discount{
+    border: 300px 0px 300px 0px;
+    align-items: center;
+}
+/* summer-offer started */
+#summer-offer{
+    background-color: rgb(229, 229, 238)
+}
+.Collection{
+    text-align: center;
+}
+.Available{
+    text-align: center;
+}
+#summer-offer .image{
+    justify-content: center;
+}
+/* .insta started */
 .insta{
     text-align: center
-    
 }
+
 .third-paragraph{
     text-align: center;
 }
